force-app/main/default/objects/FSM_LeafletConfiguration__mdt/FSM_LeafletConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Stores leaflet configurations. Configured records are used to dynamically control values appearing in leaflets screen flow.</description>
    <label>Leaflet Configuration</label>
    <pluralLabel>Leaflet Configurations</pluralLabel>
</CustomObject>