force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_ConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfigurationType__c</fullName>
    <description>Configuration type. List views are created for easy edits</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Template</fullName>
                <default>true</default>
                <label>Template</label>
            </value>
            <value>
                <fullName>Supporting Information</fullName>
            </value>
            <value>
                <fullName>Reason for Maintenance</fullName>
            </value>
            <value>
                <fullName>Reason for Visit</fullName>
            </value>
            <value>
                <fullName>Meter Location</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>