force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_CustomerCommsType__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerCommsType__c</fullName>
    <description>Created as part of SFS-5347</description>
    <label>Customer Comms Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leaflets</fullName>
                <default>true</default>
                <label>Leaflets</label>
            </value>
            <value>
                <fullName>Proforma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>