force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_DevServ__c.field-meta.xml
<CustomField>
    <fullName>FSM_DevServ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this configuration applies to Dev Serv BU.</description>
    <inlineHelpText>If ticked, this configuration applies to Dev Serv BU.</inlineHelpText>
    <label>Dev Serv</label>
    <type>Checkbox</type>
</CustomField>