force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_DisplayText__c.field-meta.xml
<CustomField>
    <fullName>FSM_DisplayText__c</fullName>
    <description>Template name/ Supporting information/ Region label.</description>
    <label>Display Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>