force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_HD__c.field-meta.xml
<CustomField>
    <fullName>FSM_HD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this configuration applies to HD BU.</description>
    <inlineHelpText>If ticked, this configuration applies to HD BU.</inlineHelpText>
    <label>HD</label>
    <type>Checkbox</type>
</CustomField>