force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_Inspector__c.field-meta.xml
<CustomField>
    <fullName>FSM_Inspector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this configuration applies to RM Role.</description>
    <inlineHelpText>If ticked, this configuration applies to RM Role.</inlineHelpText>
    <label>Inspector</label>
    <type>Checkbox</type>
</CustomField>