force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_MailjetURL__c.field-meta.xml
<CustomField>
    <fullName>FSM_MailjetURL__c</fullName>
    <description>Mailjet URL</description>
    <label>Mailjet URL</label>
    <type>Url</type>
</CustomField>