force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_Metering__c.field-meta.xml
<CustomField>
    <fullName>FSM_Metering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this configuration applies to Metering BU.</description>
    <inlineHelpText>If ticked, this configuration applies to Metering BU.</inlineHelpText>
    <label>Metering</label>
    <type>Checkbox</type>
</CustomField>