force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_Order__c.field-meta.xml
<CustomField>
    <fullName>FSM_Order__c</fullName>
    <description>If given, reocrds are queried in this order.</description>
    <inlineHelpText>Define the order in which these records are displayed on the flow.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>