force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_Proforma__c.field-meta.xml
<CustomField>
    <fullName>FSM_Proforma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proforma</label>
    <type>Checkbox</type>
</CustomField>