force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_RMReinstatementRole__c.field-meta.xml
<CustomField>
    <fullName>FSM_RMReinstatementRole__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this configuration applies to the RM and Reinstatement Role.</description>
    <inlineHelpText>If ticked, this configuration applies to the RM and Reinstatement Role.</inlineHelpText>
    <label>R&amp;M/ Reinstatement</label>
    <type>Checkbox</type>
</CustomField>