force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/FSM_Water__c.field-meta.xml
<CustomField>
    <fullName>FSM_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this configuration applies to Water BU.</description>
    <inlineHelpText>If ticked, this configuration applies to Water BU.</inlineHelpText>
    <label>Water</label>
    <type>Checkbox</type>
</CustomField>