force-app/main/default/objects/FSM_LeafletConfiguration__mdt/fields/Mailjet_Id__c.field-meta.xml
<CustomField>
    <fullName>Mailjet_Id__c</fullName>
    <description>Mailjet Id</description>
    <label>Mailjet Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>