force-app/main/default/objects/FSM_LeafletConfiguration__mdt/listViews/Roles.listView-meta.xml
<ListView>
    <fullName>Roles</fullName>
    <columns>FSM_ConfigurationType__c</columns>
    <columns>FSM_DisplayText__c</columns>
    <columns>FSM_Water__c</columns>
    <columns>FSM_HD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_ConfigurationType__c</field>
        <operation>equals</operation>
        <value>Role</value>
    </filters>
    <label>Roles</label>
</ListView>