force-app/main/default/objects/FSM_LeafletConfiguration__mdt/listViews/Supporting_Information.listView-meta.xml
<ListView>
    <fullName>Supporting_Information</fullName>
    <columns>FSM_ConfigurationType__c</columns>
    <columns>FSM_DisplayText__c</columns>
    <columns>FSM_MailjetURL__c</columns>
    <columns>FSM_Metering__c</columns>
    <columns>FSM_HD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_ConfigurationType__c</field>
        <operation>equals</operation>
        <value>Supporting Information</value>
    </filters>
    <label>Supporting Information</label>
</ListView>